Add functions in all activities

--- a/app/src/main/res/layout/activity_section_f2.xml
+++ b/app/src/main/res/layout/activity_section_f2.xml
@@ -30,7 +30,7 @@
             android:theme="@style/CustomToolbarTheme"
             app:popupTheme="@style/CustomPopupTheme"
             app:subtitleTextAppearance="@style/Toolbar.SubtitleText"
-            app:title="@string/section1identificationandenrollmentinformation_mainheading"
+            app:title="@string/f2title"
             app:titleTextAppearance="@style/Toolbar.TitleText" />
 
         <ScrollView
