--- a/app/src/main/res/layout/activity_section_f6_s7.xml
+++ b/app/src/main/res/layout/activity_section_f6_s7.xml
@@ -1515,7 +1515,8 @@
             <!-- f6723  CheckBox   -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/fldGrpCVf6723"
-                style="@style/cardView">
+                style="@style/cardView"
+                android:visibility="@{form.f6722.equals(`1`)? View.GONE : View.VISIBLE}">
 
                 <LinearLayout
                     android:layout_width="match_parent"
