--- a/app/src/main/res/layout/activity_section_f6_s5.xml
+++ b/app/src/main/res/layout/activity_section_f6_s5.xml
@@ -319,7 +319,8 @@
                     <RadioGroup
                         android:id="@+id/f6504"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:onCheckedChanged="@{()->f6506.clearCheck() + f6507.clearCheck() + f6508.clearCheck() + f6508.clearCheck() + f6509.clearCheck() + f6510.clearCheck() + f6513.clearCheck() + f6514.clearCheck() + f6515.clearCheck() + f6517.clearCheck() + f6519.clearCheck() + f6520.clearCheck() + f6522.clearCheck() + f6523.clearCheck() + f6524.clearCheck() + f6525.clearCheck()}">
 
                         <RadioButton
                             android:id="@+id/f6504a"
