--- a/app/src/main/res/layout/activity_section_f7_s3.xml
+++ b/app/src/main/res/layout/activity_section_f7_s3.xml
@@ -73,7 +73,8 @@
                     <RadioGroup
                         android:id="@+id/f7301"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:onCheckedChanged="@{()->f7302.clearCheck() }">
 
                         <RadioButton
                             android:id="@+id/f7301a"
@@ -97,7 +98,8 @@
             <!-- f7302  Radio   -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/fldGrpCVf7302"
-                style="@style/cardView">
+                style="@style/cardView"
+                android:visibility="@{form.f7301.equals(`2`)? View.GONE : View.VISIBLE}">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -1152,111 +1154,120 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
-            <!-- f7318  Radio   -->
-            <androidx.cardview.widget.CardView
-                android:id="@+id/fldGrpCVf7318"
-                style="@style/cardView">
+            <LinearLayout
+                android:id="@+id/fldGrpCVf731701"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="@{form.f7317.equals(`1`)? View.GONE : View.VISIBLE}">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/bottom"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            style="@style/quesNum"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:text="@string/Q_f7318" />
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:text="@string/f7318" />
-                    </LinearLayout>
-
-                    <RadioGroup
-                        android:id="@+id/f7318"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <RadioButton
-                            android:id="@+id/f7318a"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:checked="@{form.f7318.equals(`1`)}"
-                            android:onClick="@{()->form.setF7318(`1`)}"
-                            android:text="@string/f7318a" />
-
-                        <RadioButton
-                            android:id="@+id/f7318b"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:checked="@{form.f7318.equals(`2`)}"
-                            android:onClick="@{()->form.setF7318(`2`)}"
-                            android:text="@string/f7318b" />
-                    </RadioGroup>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-            <!-- f7319  Radio   -->
-            <androidx.cardview.widget.CardView
-                android:id="@+id/fldGrpCVf7319"
-                style="@style/cardView">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                <!-- f7318  Radio   -->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/fldGrpCVf7318"
+                    style="@style/cardView"
+                    android:visibility="@{form.f7318.equals(`1`)? View.GONE : View.VISIBLE}">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/bottom"
-                        android:orientation="horizontal">
+                        android:orientation="vertical">
 
-                        <TextView
-                            style="@style/quesNum"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:text="@string/Q_f7319" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/bottom"
+                            android:orientation="horizontal">
 
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:text="@string/f7319" />
+                            <TextView
+                                style="@style/quesNum"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:text="@string/Q_f7318" />
+
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:text="@string/f7318" />
+                        </LinearLayout>
+
+                        <RadioGroup
+                            android:id="@+id/f7318"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <RadioButton
+                                android:id="@+id/f7318a"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:checked="@{form.f7318.equals(`1`)}"
+                                android:onClick="@{()->form.setF7318(`1`)}"
+                                android:text="@string/f7318a" />
+
+                            <RadioButton
+                                android:id="@+id/f7318b"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:checked="@{form.f7318.equals(`2`)}"
+                                android:onClick="@{()->form.setF7318(`2`)}"
+                                android:text="@string/f7318b" />
+                        </RadioGroup>
                     </LinearLayout>
+                </androidx.cardview.widget.CardView>
 
-                    <RadioGroup
-                        android:id="@+id/f7319"
+                <!-- f7319  Radio   -->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/fldGrpCVf7319"
+                    style="@style/cardView">
+
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
 
-                        <RadioButton
-                            android:id="@+id/f7319a"
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:checked="@{form.f7319.equals(`1`)}"
-                            android:onClick="@{()->form.setF7319(`1`)}"
-                            android:text="@string/f7319a" />
+                            android:background="@drawable/bottom"
+                            android:orientation="horizontal">
 
-                        <RadioButton
-                            android:id="@+id/f7319b"
+                            <TextView
+                                style="@style/quesNum"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:text="@string/Q_f7319" />
+
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:text="@string/f7319" />
+                        </LinearLayout>
+
+                        <RadioGroup
+                            android:id="@+id/f7319"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:checked="@{form.f7319.equals(`2`)}"
-                            android:onClick="@{()->form.setF7319(`2`)}"
-                            android:text="@string/f7319b" />
-                    </RadioGroup>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
+                            android:layout_height="wrap_content">
+
+                            <RadioButton
+                                android:id="@+id/f7319a"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:checked="@{form.f7319.equals(`1`)}"
+                                android:onClick="@{()->form.setF7319(`1`)}"
+                                android:text="@string/f7319a" />
+
+                            <RadioButton
+                                android:id="@+id/f7319b"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:checked="@{form.f7319.equals(`2`)}"
+                                android:onClick="@{()->form.setF7319(`2`)}"
+                                android:text="@string/f7319b" />
+                        </RadioGroup>
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
 
 
             <!--EndButton LinearLayout-->
