--- a/app/src/main/res/layout/activity_section_f9_s5.xml
+++ b/app/src/main/res/layout/activity_section_f9_s5.xml
@@ -175,7 +175,8 @@
             <!-- f9503  Radio   -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/fldGrpCVf9503"
-                style="@style/cardView">
+                style="@style/cardView"
+                android:visibility="@{form.f9502.equals(`2`)? View.GONE : View.VISIBLE}">
 
                 <LinearLayout
                     android:layout_width="match_parent"
